reset-password,event emitters

--- a/.env
+++ b/.env
@@ -7,3 +7,8 @@ POSTGRE_DB_NAME=MediumCloneDB
 PASSWORD_HASH_SALT_KEY=secretsaltkey*
 JWT_SECRET_KEY=secretjwtkey
 JWT_REFRESH_SECRET_KEY=secretjwtrefreshkey
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_USER=acanakdas2@gmail.com
+EMAIL_PASSWORD=*
+EMAIL_FROM= NodeJS Medium Clone Project
