--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.3",
+    "nodemailer": "^6.7.8",
     "nodemon": "^2.0.15",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.21.4",
+    "uuid": "^8.3.2",
     "winston": "^3.8.1"
   }
 }
