--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
@@ -22,6 +23,7 @@
     "nodemon": "^2.0.15",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
+    "redis": "^4.3.0",
     "sequelize": "^6.21.4",
     "uuid": "^8.3.2",
     "winston": "^3.8.1"
